item edit added

--- a/cart/templates/cart/partials/partial2.html
+++ b/cart/templates/cart/partials/partial2.html
@@ -1,7 +1,8 @@
+{% load verbatim %}
+{% verbatim %}
 <p>This is the partial for view 2.</p>
 <p>
   Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
 <div ng-controller="ModalCtrl">
     <button class="btn" ng-click="open()">Open me!</button>
@@ -19,3 +20,5 @@
         </div>
     </div>
 </div>
+{% endverbatim %}
+{% csrf_token %}
