--- a/cart/templates/cart/partials/partial3.html
+++ b/cart/templates/cart/partials/partial3.html
@@ -1,8 +1,11 @@
 {% load verbatim %}
 {% verbatim %}
 <div ng-controller="tab3init" class="el-wrapper">
-	<app-chart>txt</app-chart>
+	<app-user>txt</app-user>
 	<div class="template-holder" style="display:none;">
+		
+	</div>
+	<div class="template-holder2" style="display:none;">
 		<!--div class="chart-holder"><input type="text" ng-model="userdata" /></div><div-->
 		<select name="userChoise" id="userChoise">
 			<option ng-repeat="user in userdata">{{user}}</option>
